fixed gap in timepicker

--- a/less/framework/base/forms.less
+++ b/less/framework/base/forms.less
@@ -683,6 +683,7 @@ select:focus:required:invalid {
     }
 
     .add-on { 
+    	margin-left: -5px;
         cursor: pointer;
         i {
            display: inline-block;
